--- a/stm32g431_pure_sine_wave_inverter.uvprojx
+++ b/stm32g431_pure_sine_wave_inverter.uvprojx
@@ -10,7 +10,7 @@
       <TargetName>STM32G431CBU</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
-      <pCCUsed>6220000::V6.22::ARMCLANG</pCCUsed>
+      <pCCUsed>6160000::V6.16::ARMCLANG</pCCUsed>
       <uAC6>1</uAC6>
       <TargetOption>
         <TargetCommonOption>
@@ -186,7 +186,6 @@
             <RvdsVP>2</RvdsVP>
             <RvdsMve>0</RvdsMve>
             <RvdsCdeCp>0</RvdsCdeCp>
-            <nBranchProt>0</nBranchProt>
             <hadIRAM2>0</hadIRAM2>
             <hadIROM2>0</hadIROM2>
             <StupSel>8</StupSel>
@@ -394,6 +393,11 @@
               <FileType>5</FileType>
               <FilePath>.\cdefs.h</FilePath>
             </File>
+            <File>
+              <FileName>wdt.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\wdt.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -408,6 +412,11 @@
               <FileName>spwm.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\spwm.c</FilePath>
+            </File>
+            <File>
+              <FileName>wdt.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\wdt.c</FilePath>
             </File>
           </Files>
         </Group>
